--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,11 @@
 }
 
 .main{
-    padding: 5% 10%;
+    padding: 0 10%;
+}
+
+.section{
+    margin: 150px 0;
 }
 
 .about{
@@ -201,3 +205,106 @@
     color: #565656;
 }
 
+.project-image{
+    width: 20px;
+    height: 20px;
+    border-bottom: 2px solid #000;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+}
+
+.projects{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.projects .projects-title{
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.projects-list{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.proj{
+    width: 370px;
+    height: 450px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.proj:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.proj-content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 15px;
+}
+
+.proj .project-image{
+    width: 100%;
+    height: 200px;
+}
+
+.proj .proj-title{
+    margin: 15px 0;
+    letter-spacing: 1px;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.proj .skills{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.proj .skills li{
+    margin: 0 5px;
+    font-size: 13px;
+    color: #eee;
+    background-color: #0D6EFD;
+    border-radius: 50px;
+    padding: 5px 10px;
+    font-weight: 600;
+}
+
+.proj .proj-text{
+    margin-bottom: 20px;
+    font-size: 16px;
+    color: #565656;
+    text-align: center;
+}
+
+.proj .source-btn{
+    margin-top: auto;
+    margin-bottom: 10%;
+    padding: 5px 15px;
+    font-size: 16px;
+    font-weight: 400;
+    color:#0D6EFD;
+    border: 1px solid #0D6EFD;
+    border-radius: 10px;
+}
+
+.proj .source-btn .material-icons-outlined{
+    color:#0D6EFD;
+    margin-right: 5px;
+    vertical-align:middle;
+}
